[gd_scene load_steps=2 format=3 uid="uid://b4kiuofwyw8ds"]

[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="1_4dcwf"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_4dcwf")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="GameSFXPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="GameSFXPlayer"]
bus = &"SFX"

[node name="MenuSFXPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MenuSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="MenuSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="MenuSFXPlayer"]
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="MenuSFXPlayer"]
bus = &"SFX"

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
